# learning

./: .gitignore  README.md
aws/lambda-test/: a.json  (+1 more)
dapps_todo_react/: package.json  window.d.ts
discord-lib/: package-lock.json  package.json  tsconfig.json
discord_project/: .gitignore
graphql-react-app/: .gitignore  README.md  package.json
hello_world_eth/: .env  hardhat.config.js  package-lock.json  package.json
jakee_react_app/: package-lock.json  package.json
laravel-simple-memo/: .editorconfig  composer.json
nextjs-turorial/: package-lock.json  package.json
python/: main.py  test_request.py  type_hints.py
python/zenn_book/: README.md  docker-compose.yaml  pyproject.toml
python/zenn_book/api/: db.py  main.py  migrate_db.py
python/zenn_book/api/cruds/: done.py  task.py
python/zenn_book/api/models/: task.py
python/zenn_book/api/routers/: done.py  task.py
python/zenn_book/api/schemas/: done.py  task.py
python/zenn_book/tests/: test_main.py
react-query-lesson/: package.json
react-redux-test/: package.json
react-vanilla-test/: package.json
react_firebase_bases/: package.json
redux-twitter-app/: .eslintrc.json  package.json
sample_next_tailwind/: package-lock.json  package.json  tailwind.config.js
sango_advent/: package-lock.json  package.json
sango_promise/: await.js  callback.js  index.js  promise.js  promiseQuiz.js  readme.md
solidity_todo_react/: package.json
tailwind-vue/: package.json  tailwind.config.js
torahack_ec_app/: .firebaserc  package.json
twitter-app-redux-toolkit/: package-lock.json  package.json
(+510 files in other folders)
